--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,75 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+html, body {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background: #000;
+  overflow: hidden; /* Disable scrollbars */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#canvas {
+  display: block;
+  height: 100vh;
+  width: 100vw;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+#logo {
+  position: absolute;
+  text-align: center;
+  bottom: 65%;
+  line-height: 0;
+  width: 100%;
+  font-family: 'Racing Sans One', sans-serif;
+  font-weight: 400;
+  font-size: 9vw;
+  color: #fff;
+  text-shadow: #00d9ff 0 0 32px;
+  mix-blend-mode: screen;
+}
+
+#controls {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#controls > .control {
+  display: block;
+  margin: 1em;
+  width: 48px;
+  height: 48px;
+  filter: invert() drop-shadow(0 0 4px #fff);
+  background-size: 100%;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  opacity: 0.5;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#controls > .control:hover {
+  opacity: 1.0;
+}
+
+#volume {
+  background-image: url(/volume_up.svg);
+  background-size: cover;
+  cursor: pointer;
+}
+
+#github {
+  background-image: url(/github.svg);
+}
+
+#about {
+  background-image: url(/help.svg);
+}
+
+#volume.on {
+  background-image: url(/volume_off.svg);
+}
+
+/* Font loading */
+@font-face {
+  font-family: 'Racing Sans One';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/RacingSansOne.woff2) format('woff2');
 }
